--- a/Semester4.html
+++ b/Semester4.html
@@ -45,6 +45,10 @@
     <a href="Algoritma dan Pemrograman.html">Algoritma dan Pemrograman</a>
     <a href="Analisis dan Visualisasi Data.html">Analisis dan Visualisasi Data</a>
     <a href="Sistem Informasi Manajemen.html">Sistem Informasi Manajemen</a>
+    <a href="pemrogramanberbasisweb.html">Pemrograman berbasis Web</a>
+    <a href="kewirausahaandieradigital.html">Kewirausahaan Di Era Digital</a>
+    <a href="prosesbisnis.html">Proses Bisnis</a>
   </div>
 </body>
 </html>
+
